--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.WizardDuel" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.WizardDuel" parent="Theme.Material3.Light.NoActionBar" />
 
-        <style name="Background" parent="Theme.WizardDuel">
-            <item name="android:windowBackground">@drawable/background</item>
-        </style>
+    <!-- ONLY LIGHT THEME, GAME IS STYLISED -->
+    <style name="Theme.WizardDuel" parent="Base.Theme.WizardDuel">
+        <item name="android:windowBackground">@drawable/background</item>
+
+        <item name="colorPrimary">@color/pencil</item>
+
+        <item name="materialButtonStyle">@style/UI.Button</item>
+
+        <!-- For some unknowable reason, the line below breaks all toggle buttons -->
+        <!-- <item name="android:buttonStyleToggle">@style/UI.Button.Toggle</item> -->
+
+        <item name="android:textViewStyle">@style/UI.Text</item>
     </style>
-
-    <style name="Theme.WizardDuel" parent="Base.Theme.WizardDuel" />
 </resources>
