* Set up the game's architecture and data/execution flow of GameActivity + GameView -> GameService -> Game -> GameObjects. * The architecture persists data when GameActivity is destroyed and brought back, until the activity finishes, using ViewModel * Game loop tested with a dummy game thread to be replaced soon. Handled by a bound service. * Also reorganised files.

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GameActivity">
+    tools:context=".activities.GameActivity">
 
-    <com.mk.wizardduel.GameView
+    <com.mk.wizardduel.views.GameView
+        android:id="@+id/game_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        app:wizardsRelativeTop="0.35"
         app:wizardsRelativeBottom="0.65"
         app:wizardsRelativeDistFromEdge="0.01"
-        />
+        app:wizardsRelativeTop="0.35" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
