--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OptionsActivity">
+    tools:context=".activities.OptionsActivity">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/options_guide_halfvert"
@@ -41,7 +41,7 @@
         app:layout_constraintBottom_toBottomOf="@id/options_guide_upperhoriz"
         />
 
-    <com.mk.wizardduel.ToggleButtonDual
+    <com.mk.wizardduel.views.ToggleButtonDual
         android:id="@+id/options_tglbtn_sound"
         style="@style/UI.Button.Toggle"
         android:checked="true"
@@ -68,7 +68,7 @@
         app:layout_constraintBottom_toBottomOf="@id/options_guide_lowerhoriz"
         />
 
-    <com.mk.wizardduel.ToggleButtonDual
+    <com.mk.wizardduel.views.ToggleButtonDual
         android:id="@+id/options_tglbtn_anim"
         style="@style/UI.Button.Toggle"
         android:checked="true"
