--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
+        app:castingAreaSize="0.3334"
+
         app:wizardsRelativeTop="0.38"
         app:wizardsRelativeBottom="0.62"
         app:wizardsRelativeDistFromEdge="0.01"
