--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -12,10 +12,39 @@
         android:layout_height="match_parent"
 
         app:castingAreaSize="0.3334"
+        app:hitPoints="5"
 
         app:wizardsRelativeTop="0.38"
         app:wizardsRelativeBottom="0.62"
         app:wizardsRelativeDistFromEdge="0.01"
+        />
+
+    <LinearLayout
+        android:id="@+id/game_layout_hp_p1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        android:padding="18dp"
+        />
+
+    <LinearLayout
+        android:id="@+id/game_layout_hp_p2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        android:padding="18dp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
